--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,13 @@
         <module>springboot_webservice</module>
         <module>test_mongdb</module>
         <module>springboot_security</module>
-        <module>springboot_aop</module>
-        <!--<module>springboot_security_oauth2</module>-->
+        <module>springboot_mybatis_reverse</module>
+        <module>springboot_fastdfs</module>
+        <module>swagger2</module>
+        <module>springboot_security_oauth2</module>
+        <module>springboot_redis</module>
+    
+		 <module>springboot_aop</module>
     </modules>
 
 
