--- a/rabbitmq_consumer/pom.xml
+++ b/rabbitmq_consumer/pom.xml
@@ -19,5 +19,9 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter</artifactId>
     </dependency>
+    <dependency>
+        <groupId>org.springframework.amqp</groupId>
+        <artifactId>spring-rabbit</artifactId>
+    </dependency>
 </dependencies>
 </project>
