--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>springboot_security_oauth2</module>
         <module>springboot_redis</module>
         <module>springboot_aop</module>
+        <module>springboot_easyexcle</module>
     </modules>
 
 
