mybatis-plus学习，连接池配置，pagehelper和插件 分页 注意版本和冲突

--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         <module>springboot_aop</module>
         <module>springboot_easyexcle</module>
         <module>redis_publish_subscriber</module>
-
+        <module>mybatis-plus</module>
     </modules>
 
 
