--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <module>springboot_easyexcle</module>
         <module>redis_publish_subscriber</module>
         <module>mybatis-plus</module>
+        <module>springboot-logback</module>
     </modules>
 
 
