--- a/test-function/pom.xml
+++ b/test-function/pom.xml
@@ -40,6 +40,17 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-spring</artifactId>
+            <version>3.4</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
