--- a/springboot_redis/src/main/resources/application.yml
+++ b/springboot_redis/src/main/resources/application.yml
@@ -2,8 +2,8 @@ server:
     port: 8080
 spring:
     redis:
-#        host: localhost
-        host: 39.108.10.101
+        host: localhost
+#        host: 39.108.10.101
         port: 6379
         database: 0
         lettuce:
@@ -12,3 +12,8 @@ spring:
                 max-wait: -1
                 max-idle: 8
                 min-idle: 0
+    redis2:
+        host: localhost
+        #        host: 39.108.10.101
+        port: 6379
+        database: 1
