--- a/rabbitmq_consumer/pom.xml
+++ b/rabbitmq_consumer/pom.xml
@@ -11,6 +11,12 @@
 
     <artifactId>rabbitmq_consumer</artifactId>
 <dependencies>
+
+    <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <optional>true</optional>
+    </dependency>
     <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-amqp</artifactId>
