--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <module>mybatis-plus</module>
         <module>springboot-logback</module>
         <module>shiro-auth</module>
+        <module>kafka</module>
     </modules>
 
 
