--- a/springboot_security_sms/pom.xml
+++ b/springboot_security_sms/pom.xml
@@ -63,6 +63,13 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-data-redis</artifactId>
     </dependency>
+
+    <dependency>
+        <groupId>commons-lang</groupId>
+        <artifactId>commons-lang</artifactId>
+        <version>2.6</version>
+        <scope>compile</scope>
+    </dependency>
 </dependencies>
 
 </project>
