支付宝支付完善

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@
 /kafka/.mvn/wrapper/
 /springboot-rabbitmq-mqtt/.mvn/wrapper/
 /springboot_security_sms/target/classes/
+/springboot_security_sms/target/classes/
