--- a/alipay/pom.xml
+++ b/alipay/pom.xml
@@ -70,6 +70,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.62</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
