--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@
 /springboot-rabbitmq-mqtt/.mvn/wrapper/
 /springboot_security_sms/target/classes/
 /springboot_security_sms/target/classes/
+/springboot_security_sms/target/classes/
+/springboot_security_sms/target/classes/
