--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@
 /springboot_security_sms/target/classes/
 /springboot_security_sms/target/classes/
 /springboot_security_sms/target/classes/
+/springboot_log4j2/.mvn/wrapper/
