--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <module>shiro-auth</module>
         <module>kafka</module>
         <module>springboot_security_sms</module>
+        <module>springboot-netty</module>
     </modules>
 
 
