--- a/rabbitmq_consumer/pom.xml
+++ b/rabbitmq_consumer/pom.xml
@@ -11,7 +11,13 @@
 
     <artifactId>rabbitmq_consumer</artifactId>
 <dependencies>
-
+    <!--热部署工具-->
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-devtools</artifactId>
+        <scope>runtime</scope>
+        <optional>true</optional>
+    </dependency>
     <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
