--- a/rabbitmq_consumer/pom.xml
+++ b/rabbitmq_consumer/pom.xml
@@ -12,12 +12,12 @@
     <artifactId>rabbitmq_consumer</artifactId>
 <dependencies>
     <!--热部署工具-->
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-devtools</artifactId>
-        <scope>runtime</scope>
-        <optional>true</optional>
-    </dependency>
+<!--    <dependency>-->
+<!--        <groupId>org.springframework.boot</groupId>-->
+<!--        <artifactId>spring-boot-devtools</artifactId>-->
+<!--        <scope>runtime</scope>-->
+<!--        <optional>true</optional>-->
+<!--    </dependency>-->
     <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
@@ -32,8 +32,14 @@
         <artifactId>spring-boot-starter</artifactId>
     </dependency>
     <dependency>
-        <groupId>org.springframework.amqp</groupId>
-        <artifactId>spring-rabbit</artifactId>
+        <groupId>com.alibaba</groupId>
+        <artifactId>fastjson</artifactId>
+        <version>1.2.62</version>
+        <scope>compile</scope>
     </dependency>
+    <!--    <dependency>-->
+<!--        <groupId>org.springframework.amqp</groupId>-->
+<!--        <artifactId>spring-rabbit</artifactId>-->
+<!--    </dependency>-->
 </dependencies>
 </project>
