--- a/springboot_rabbitmq/pom.xml
+++ b/springboot_rabbitmq/pom.xml
@@ -49,6 +49,12 @@
             <artifactId>lombok</artifactId>
             <version>1.16.22</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.62</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
