--- a/springboot_rabbitmq/src/main/resources/application.yml
+++ b/springboot_rabbitmq/src/main/resources/application.yml
@@ -12,3 +12,8 @@ spring:
     publisher-confirm-type: correlated
     publisher-returns: true
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
