swagger3集成,及相关配置

--- a/swagger2/src/main/resources/application-dev.yml
+++ b/swagger2/src/main/resources/application-dev.yml
@@ -9,8 +9,8 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
 
 mybatis:
-  mapper-locations: classpath:mapping/*Mapper.xml
-  type-aliases-package: com.example.entity
+  mapper-locations: classpath:mapper/*Mapper.xml
+  type-aliases-package: cn.fan.swagger2.bean
 
 #showSql
 logging:
