springboot 缓存系统（分布式存储中存的对象redis设置了序列化方式为jackson，对复杂对象反序列化会报错，如果使用默认的jdk序列化，看到的数据就不直观）

--- a/springboot-cache/pom.xml
+++ b/springboot-cache/pom.xml
@@ -23,6 +23,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
+        <!--引入SpringBoot的Web模块-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <!--guava -->
         <dependency>
             <groupId>com.google.guava</groupId>
