--- a/permission/src/main/resources/application.yml
+++ b/permission/src/main/resources/application.yml
@@ -5,6 +5,7 @@ spring:
   datasource:
     druid:
       driver-class-name: com.mysql.jdbc.Driver
+#      driver-class-name:  com.mysql.cj.jdbc.Driver
       url: jdbc:mysql://localhost:3306/cps?useUnicode=true&characterEncoding=UTF8&allowMultiQueries=true
       username: root
       password: root
