--- a/permission/src/main/resources/application.yml
+++ b/permission/src/main/resources/application.yml
@@ -6,9 +6,11 @@ spring:
     druid:
       driver-class-name: com.mysql.jdbc.Driver
 #      driver-class-name:  com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://localhost:3306/cps?useUnicode=true&characterEncoding=UTF8&allowMultiQueries=true
+#      url: jdbc:mysql://localhost:3306/cps?useUnicode=true&characterEncoding=UTF8&allowMultiQueries=true
+      url: jdbc:mysql://172.18.105.32:3306/cps?useUnicode=true&characterEncoding=UTF8&allowMultiQueries=true
       username: root
-      password: root
+#      password: root
+      password: hthl@2018
       initialSize: 5  #初始建立连接数量
       minIdle: 5  #最小连接数量
       maxActive: 20 #最大连接数量
