--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,22 @@
 /rabbitmq_consumer/target/classes/cn/fan/
 /springboot_aop/target/classes/cn/fan/aop/
 /springboot_security/target/classes/cn/fan/
-
-/springboot_redis/target/classes/
 /springboot_redis/target/classes/cn/fan/
-/rabbitmq_consumer/target/classes/
-/springboot_mybatis_reverse/target/classes/
+
 /test_mongdb/target/
 /springboot_mail/.mvn/
 /springboot_es/.mvn/
 /hbase/.mvn/
-/springboot_security_sms/target/classes/
-/elk/.mvn/wrapper/
-/hbase/.mvn/wrapper/
-/kafka/.mvn/wrapper/
-/springboot-rabbitmq-mqtt/.mvn/wrapper/
-/springboot_security_sms/target/classes/
-/elk/.mvn/wrapper/
-/hbase/.mvn/wrapper/
-/kafka/.mvn/wrapper/
-/springboot-rabbitmq-mqtt/.mvn/wrapper/
-/springboot_security_sms/target/classes/
-/springboot_security_sms/target/classes/
-/springboot_security_sms/target/classes/
-/springboot_security_sms/target/classes/
-/springboot_log4j2/.mvn/wrapper/
-/devtool/.mvn/wrapper/
-/springboot-cache/.mvn/wrapper/
+
+
+
+/*/mvnw
+/*/mvnw.cmd
+
+/*/.mvn/wrapper/
+/*/target/classes/
+
+
 /devtool/.mvn
 /.idea
 /springboot-cache/.mvn
