--- a/springboot_mybatis_reverse/pom.xml
+++ b/springboot_mybatis_reverse/pom.xml
@@ -31,7 +31,8 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.35</version>
+<!--            <version>8.0.20</version>-->
+            <scope>runtime</scope>
         </dependency>
 <!--        <dependency>-->
 <!--            <groupId>com.microsoft.sqlserver</groupId>-->
