--- a/mybatis-plus/pom.xml
+++ b/mybatis-plus/pom.xml
@@ -82,7 +82,8 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
-            <version>1.1.10</version>
+<!--            <version>1.1.10</version>-->
+            <version>1.1.21</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
