--- a/mybatis-plus/src/main/resources/application.yml
+++ b/mybatis-plus/src/main/resources/application.yml
@@ -8,6 +8,9 @@ spring:
       url: jdbc:mysql://localhost:3306/plus?useUnicode=true&characterEncoding=UTF8&allowMultiQueries=true
       username: root
       password: root
+#      url: jdbc:mysql://172.18.105.32:3306/plus?useUnicode=true&characterEncoding=UTF8&allowMultiQueries=true
+#      username: root
+#      password: hthl@2018
       initialSize: 5  #初始建立连接数量
       minIdle: 5  #最小连接数量
       maxActive: 20 #最大连接数量
