--- a/springboot-kafka/src/main/resources/application.properties
+++ b/springboot-kafka/src/main/resources/application.properties
@@ -3,7 +3,10 @@ spring.kafka.bootstrap-servers=192.168.14.11:9092,192.168.14.10:9092,192.168.14.
 ###########【初始化生产者配置】###########
 # 重试次数(默认0，如果设置为大于0的值可能会使消息顺序发生改变)
 spring.kafka.producer.retries=0
-# 应答级别:多少个分区副本备份完成时向生产者发送ack确认(可选0、1、all/-1)
+#procedure要求leader在考虑完成请求之前收到的确认数，用于控制发送记录在服务端的持久化，其值可以为如下：
+#acks = 0 如果设置为零，则生产者将不会等待来自服务器的任何确认，该记录将立即添加到套接字缓冲区并视为已发送。在这种情况下，无法保证服务器已收到记录，并且重试配置将不会生效（因为客户端通常不会知道任何故障），为每条记录返回的偏移量始终设置为-1。
+#acks = 1 这意味着leader会将记录写入其本地日志，但无需等待所有副本服务器的完全确认即可做出回应，在这种情况下，如果leader在确认记录后立即失败，但在将数据复制到所有的副本服务器之前，则记录将会丢失。
+#acks = all 这意味着leader将等待完整的同步副本集以确认记录，这保证了只要至少一个同步副本服务器仍然存活，记录就不会丢失，这是最强有力的保证，这相当于acks = -1的设置。
 spring.kafka.producer.acks=1
 # 批量大小
 #spring.kafka.producer.batch-size=16384
@@ -24,7 +27,7 @@ spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.Str
 ###########【初始化消费者配置】###########
 # 默认的消费组ID
 spring.kafka.consumer.properties.group.id=defaultConsumerGroup
-# 是否自动提交offset
+# 是否自动提交offset(设置为false 手动提交)
 spring.kafka.consumer.enable-auto-commit=true
 # 提交offset延时(接收到消息后多久提交offset)
 spring.kafka.consumer.auto.commit.interval.ms=1000
@@ -42,6 +45,8 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 # 消费端监听的topic不存在时，项目启动会报错(关掉)
 spring.kafka.listener.missing-topics-fatal=false
+#手动提交模式
+#spring.kafka.listener.ack-mode=manual
 # 设置批量消费
 # spring.kafka.listener.type=batch
 # 批量消费每次最多消费多少条消息
