--- a/swagger2/pom.xml
+++ b/swagger2/pom.xml
@@ -34,16 +34,16 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>1.3.2</version>
         </dependency>
-        <!-- swagger2-->
+        <!-- swagger2   升级版本  避免低版本造成tag中文无法弹开窗口-->
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
-            <version>2.6.0</version>
+            <version>2.9.2</version>
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
-            <version>2.6.0</version>
+            <version>2.9.2</version>
         </dependency>
 
         <dependency>
