--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <module>shiro-token</module>
         <module>springboot-kafka</module>
         <module>swagger2word</module>
+        <module>shiro_ini</module>
     </modules>
 
 
