jasper  流程   springboot 项目   解决中文无法显示问题

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
         <module>springboot-kafka</module>
         <module>swagger2word</module>
         <module>shiro_ini</module>
+        <module>jasper</module>
     </modules>
 
 
